# boxmat_lite

./: .gitignore  Dockerfile  docker-run.bash  mqtt_bytetrack_cpu_mp4.py  mqtt_bytetrack_cpu_mqtt.bk  mqtt_bytetrack_cpu_mqtt.py  pyproject.toml  requirements.txt
boxmot/: __init__.py
boxmot/appearance/backbones/: hacnn.py  mlfn.py  mobilenetv2.py  osnet.py  osnet_ain.py  resnet.py
boxmot/appearance/backbones/clip/: make_model.py  make_model_clipreid.py
boxmot/appearance/backbones/clip/clip/: clip.py  model.py
boxmot/appearance/backbones/lmbn/: attention.py  bnneck.py  lmbn_n.py
boxmot/appearance/backends/: base_backend.py  tensorrt_backend.py  tflite_backend.py  torchscript_backend.py
boxmot/appearance/exporters/: onnx_exporter.py  torchscript_exporter.py
boxmot/appearance/reid/: auto_backend.py  export.py  registry.py
boxmot/trackers/botsort/: botsort.py
boxmot/trackers/bytetrack/: bytetrack.py
boxmot/trackers/deepocsort/: deepocsort.py
boxmot/trackers/strongsort/: strongsort.py
boxmot/utils/: matching.py  ops.py  torch_utils.py
tracking/: track.py  utils.py  val.py
tracking/detectors/: rfdetr.py  yolo_interface.py  yolonas.py  yolov9.py  yolox.py
